
	* merged Eduard Szöcs's code on dispersion weighting of
	overdispersed species following Clarke, K. R., M. G. Chapman,
	P. J. Somerfield, and H. R. Needham.  2006. Dispersion-based
	Weighting of Species Counts in Assemblage Analyses. _Marine
	Ecology Progress Series_, 320, 11–27. The basic development was
	made in github.com and merged to R-Forge.

	* orditkplot: bmp has been available in unix-alike OSes since
	2008, or a moth after writing orditkplot. Thanks to Brian Ripley
	for informing us.

	* vignettes: vignettes use now standard article style instead of
	hacked jss style. Decision and diversity vignettes are in two
	columns, but intro in one (R output did not fit in one
	column). The common packages, macros and definitions were moved to
	new vegan.sty which is written so that it should work both with
	amsart and article, and with one and two columns. Figures are now
	in standard figure environment, but intro redefines this to use
	sidecaption figures.  
	
Version 2.1-31 (closed July 10, 2013)

	* Dependencies: Vegan now depends on a version equal to 0.7-4 or
	later.

	* betadisper, permutest.betadisper: Modified to use the new
	permute package API (from version 0.7-3 onwards). The `permutest`
	method gains a new argument `permutations`, which takes a matrix
	of permutations to be used.

	* protest: modified to use the new permute API. Gains argument
	`control` which describes the design. As a result, `strata`
	argument has been removed and `permutations` argument can only
	be used to supply your own matrix of permutations. The number of
	permutations and other features of the design are set via `control`
	and function `how()` from permute.

	* ordipointlabel: now uses `ordiArgAbsorber()` to stop the warnings
	about non-graphical paramters being passed to plotting functions.

	* ordisurf: can now pass in a line width for the contours via
	argument `lwd.cl`.

	* ordiArrowTextXY: New (internal) support function that finds